# DAS_IO

./: example.ipynb  pyproject.toml  readme.md  requirements.txt  setup.py
src/das_io/: __init__.py  data_io.py
src/das_io.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
