[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "das_io"
version = "0.1.0"
description = "Data I/O utilities for DAS"
authors = [{ name = "Eric Snyder", email = "esnyder@cornell.edu" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

# Dependencies
dependencies = [
    "numpy",
    "pandas",
    # etc.
]

[tool.setuptools.packages.find]
where = ["src"]